Add references and modify Dan's changes

--- a/mc3.bib
+++ b/mc3.bib
@@ -1,3 +1,13 @@
+@article{alf09,
+    author = {Alfaro, M. E. and Santini, F. and Brock, C. and Alamillo, H.
+        and Dornburg, A. and Rabosky, D. L. and Carnevale, G.
+        and Harmon, L. J.}, year = {2009},
+    title = {Nine exceptional radiations plus high turnover explain species
+        diversity in jawed vertebrates},
+    journal = {Proceedings of the National Academy of Sciences
+        of the United States of America}, volume = {106}, pages = {13410-13414}
+}
+
 @article{alt04,
     author = {Altekar, G. and Dwarkadas, S. and Huelsenbeck, J. P.
         and Ronquist, F.}, year = {2004},
@@ -7,11 +17,67 @@
     journal = {Bioinformatics}, volume = {20}, pages = {407-415}
 }
 
+@book{coy04,
+    author = {Coyne, J. A. and Orr, H. A.}, year = {2004},
+    title = {Speciation},
+    publisher = {Sinauer Associates},
+    address = {Sunderland, MA}
+}
+
+@article{eas11,
+    author = {Eastman, J. M. and Alfaro, M. E. and Joyce, P.
+        and Hipp, A. L. and Harmon, L. J.}, year = {2011},
+    title = {A novel comparative method for identifying shifts
+        in the rate of character evolution on trees},
+    journal = {Evolution}, volume = {65}, pages = {3578-3589}
+}
+
 @book{giv05,
     author = {Givens, G. H. and Hoeting, J. A.}, year = {2005},
     title = {Computational Statistics},
     publisher = {John Wiley \& Sons, Inc.},
     address = {Hoboken, NJ}
+}
+
+@article{gre95,
+    author = {Green, P. J.}, year = {1995},
+    title = {Reversible jump Markov Chain Monte Carlo computation
+        and Bayesian model determination},
+    journal = {Biometrika}, volume = {82}, pages = {711-732}
+}
+
+@article{jet12,
+    author = {Jetz, W. and Thomas, G. H. and Joy, J. B. and Hartmann, K.
+        and Mooers, A.}, year = {2012},
+    title = {The global diversity of birds in space and time},
+    journal = {Nature}, volume = {491}, pages = {444-448}
+}
+
+@incollection{los10,
+    author = {Losos, J. B. and Mahler, D. L.}, year = {2010},
+    title = {Adaptive radiation: the interaction of ecological opportunity,
+        adaptation, and speciation},
+    booktitle = {Evolution Since Darwin: The First 150 Years},
+    editor = {Bell, M. A. and Futuyma, D. J. and Eanes, W. F.
+        and Levinton, J. S.},
+    pages = {381-420},
+    publisher = {Sinauer Associates},
+    address = {Sunderland, MA}
+}
+
+@article{mah10,
+    author = {Mahler, D. L. and Revell, L. J. and Glor, R. E. and Losos, J. B.},
+    year = {2010},
+    title = {Ecological opportunity and the rate of morphological evolution
+        in the diversification of greater antillean anoles},
+    journal = {Evolution}, volume = {64}, pages = {2731-2745}
+}
+
+@article{mit88,
+    author = {Mitter, C. and Farrell, B. and Wiegmann, B.}, year = {1988},
+    title = {The phylogenetic study of adaptive zones: has phytophagy
+        promoted insect diversification?},
+    journal = {American Naturalist}, volume = {132}, pages = {107-128}
 }
 
 @article{nee94,
@@ -20,6 +86,39 @@
     title = {Extinction rates can be estimated from molecular phylogenies},
     journal = {Philosophical Transactions of the Royal Society of London,
         Series B: Biological Sciences}, volume = {344}, pages = {77-82}
+}
+
+@article{ome12,
+    author = {O'Meara, B. C.}, year = {2012},
+    title = {Evolutionary inferences from phylogenies:
+        a review of methods},
+    journal = {Annual Review of Ecology, Evolution, and Systematics},
+    volume = {43}, pages = {267-285}
+}
+
+@article{pan01,
+    author = {Panhuis, T. M. and Butlin, R. and Zuk, M. and Tregenza, T.},
+    year = {2001},
+    title = {Sexual selection and speciation},
+    journal = {Trends in Ecology \& Evoution},
+    volume = {16}, pages = {364-371}
+}
+
+@article{pyr13,
+    author = {Pyron, R. A. and Burbrink, F. T. and Wiens, J. J.}, year = {2013},
+    title = {A phylogeny and updated classification of Squamata,
+        including 4161 species of lizards and snakes},
+    journal = {BMC Evolutionary Biology}, volume = {13}, pages = {93}
+}
+
+@article{rab13,
+    author = {Rabosky, D. L. and Santini, F. and Eastman, J. M.
+        and Smith, S. A. and Sidlauskas, B. and Chang, J. and Alfaro, M. E.},
+    year = {2013},
+    title = {Rates of speciation and morphological evolution are correlated
+        across the largest vertebrate radiation},
+    journal = {Nature Communications},
+    volume = {4}, pages = {10.1038/ncomms2958}
 }
 
 @article{rab14plos,
@@ -35,4 +134,58 @@
     title = {Analysis and visualization of complex macroevolutionary dynamics:
         an example from \uppercase{A}ustralian scincid lizards},
     journal = {Systematic Biology}, volume = {63}, pages = {610-627}
+}
+
+@article{rab14mee,
+    author = {Rabosky, D. L. and Grundler, M. and Anderson, C. J. R.
+        and Title, P. and Shi, J. J. and Brown, J. W. and Huang, H.
+        and Larson, J. G.}, year = {2014},
+    title = {BAMMtools: an R package for the analysis of evolutionary dynamics
+        on phylogenetic trees},
+    journal = {Methods in Ecology and Evolution},
+    volume = {5}, pages = {701–707}
+}
+
+@article{rev12,
+    author = {Revell, L. J. and Mahler, D. L. and Peres-Neto, P. R.
+        and Redelings, B. D.}, year = {2012},
+    title = {A new method for identifying exceptional phenotypic
+        diversification},
+    journal = {Evolution}, volume = {66}, pages = {135-146}
+}
+
+@book{sch00,
+    author = {Schluter, D.}, year = {2000},
+    title = {Ecology of adaptive radiation},
+    publisher = {Oxford University Press},
+    address = {Oxford}
+}
+
+@article{tho12,
+    author = {Thomas, G. H. and Freckleton, R. P.}, year = {2012},
+    title = {MOTMOT: models of trait macroevolution on trees},
+    journal = {Methods in Ecology and Evolution},
+    volume = {3}, pages = {145-151}
+}
+
+@article{ven11,
+    author = {Venditti, C. and Meade, A. and Pagel, M.}, year = {2011},
+    title = {Multiple routes to mammalian diversity},
+    journal = {Nature}, volume = {479}, pages = {393-396}
+}
+
+@article{zan14,
+    author = {Zanne, Amy E. and Tank, David C. and Cornwell, William K.
+        and Eastman, Jonathan M. and Smith, Stephen A.
+        and FitzJohn, Richard G. and McGlinn, Daniel J. and O'Meara, Brian C.
+        and Moles, Angela T. and Reich, Peter B. and Royer, Dana L.
+        and Soltis, Douglas E. and Stevens, Peter F. and Westoby, Mark
+        and Wright, Ian J. and Aarssen, Lonnie and Bertin, Robert I.
+        and Calaminus, Andre and Govaerts, Rafael and Hemmings, Frank
+        and Leishman, Michelle R. and Oleksyn, Jacek and Soltis, Pamela S.
+        and Swenson, Nathan G. and Warman, Laura and Beaulieu, Jeremy M.},
+    year = {2014},
+    title = {Three keys to the radiation of angiosperms into freezing
+        environments},
+    journal = {Nature}, volume = {506}, pages = {89-92},
 }
