Replace hr with h

--- a/mc3.tex
+++ b/mc3.tex
@@ -724,16 +724,16 @@ reduced the amount of time runs would have taken without it.
 For the simulated trees, which ran for 25 million generations,
 the mean number of hours that runs took with
 one chain, four chains, and eight chains were
-6.3, 6.5, and 6.8 hr.
+6.3, 6.5, and 6.8 h.
 %
 Without \MCMCMCMC, the runs with four and eight chains
-would have taken 25.2 and 50.4 hr.
+would have taken 25.2 and 50.4 h.
 %
 For the skink tree, which ran for 100 million generations,
-the means were 18.8, 20.7, and 21.4 hr for one, four, and eight chains.
+the means were 18.8, 20.7, and 21.4 h for one, four, and eight chains.
 %
 Without \MCMCMCMC, the runs with four and eight chains
-would have taken 75.2 (3.1 d) and 150.5 hr (6.3 d).
+would have taken 75.2 h (3.1 d) and 150.5 h (6.3 d).
 
 
 % Point out the importance of the results and place them in the context
